--- a/scss/init/_glass.scss
+++ b/scss/init/_glass.scss
@@ -11,7 +11,7 @@
         // prettier-ignore
         --scheme-color-lighten-rgba: rgba(var(--scheme-color-lighten),var(--transparency));
         // prettier-ignore
-        --highlight-color-rgba: rgba(var(--dui-highlight), var(--transparency));
+        --highlight-color-rgba: rgba(var(--dui-primary), var(--transparency));
         // prettier-ignore
         --highlight-color-darken-rgba: rgba(var(--highlight-color-darken),var(--transparency));
         --group-1-color-transparent: rgba(1, 114, 75, var(--transparency));
