[Global] Add 4 tiers for primary light & dark colors

--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -5,6 +5,11 @@
         --dui-scheme: 212, 212, 212;
         --dui-primary: 0, 75, 151; // for highlighting
         --dui-primary-invert: #d4d4d4;
+        // TODO: calculate following colors base on its origin (primary)
+        --dui-primary-lighten-1: #0058b0;
+        --dui-primary-lighten-2: #0064ca;
+        --dui-primary-darken-1: #003e7d;
+        --dui-primary-darken-2: #003264;
         --dui-base: black; // mostly for text <=> --dui-scheme-invert
         --dui-base-mute: #4d4d4d; //lightmute: #b2b2b2
         /* Classification colors */
