--- a/css/dynamic-style.css
+++ b/css/dynamic-style.css
@@ -3,6 +3,10 @@
   --dui-scheme: 212, 212, 212;
   --dui-primary: 0, 75, 151;
   --dui-primary-invert: #d4d4d4;
+  --dui-primary-lighten-1: #0058b0;
+  --dui-primary-lighten-2: #0064ca;
+  --dui-primary-darken-1: #003e7d;
+  --dui-primary-darken-2: #003264;
   --dui-base: black;
   --dui-base-mute: #4d4d4d;
   /* Classification colors */
