[Global] Add 2 more tiers for primary color

--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -8,8 +8,10 @@
         // TODO: calculate following colors base on its origin (primary)
         --dui-primary-lighten-1: #0058b0;
         --dui-primary-lighten-2: #0064ca;
+        --dui-primary-lighten-3: #0071e3;
         --dui-primary-darken-1: #003e7d;
         --dui-primary-darken-2: #003264;
+        --dui-primary-darken-3: #00254a;
         --dui-base: black; // mostly for text <=> --dui-scheme-invert
         --dui-base-mute: #4d4d4d; //lightmute: #b2b2b2
         /* Classification colors */
