--- a/css/dynamic-style.css
+++ b/css/dynamic-style.css
@@ -5,8 +5,10 @@
   --dui-primary-invert: #d4d4d4;
   --dui-primary-lighten-1: #0058b0;
   --dui-primary-lighten-2: #0064ca;
+  --dui-primary-lighten-3: #0071e3;
   --dui-primary-darken-1: #003e7d;
   --dui-primary-darken-2: #003264;
+  --dui-primary-darken-3: #00254a;
   --dui-base: black;
   --dui-base-mute: #4d4d4d;
   /* Classification colors */
